add correct and wrong class to questions answered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,11 +93,11 @@
 }
 
 .correct {
-    background-color: greenyellow;
+    background-color: lightgreen;
 }
 
 .wrong {
-    background-color: darkred;
+    background-color: lightcoral;
 }
 
 .submit {
